--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.1",
+    "install": "^0.13.0",
+    "mongodb": "^6.2.0",
+    "mongoose": "^8.0.0",
     "next": "14.0.1",
+    "nodemailer": "^6.9.7",
+    "npm": "^10.2.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "tailwindcss": "3.3.5",
     "typescript": "5.2.2"
