--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "npm": "^10.2.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-wavify": "^1.9.0",
     "tailwindcss": "3.3.5",
     "typescript": "5.2.2"
   }
