--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@types/node": "20.8.10",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
@@ -23,11 +24,8 @@
     "npm": "^10.2.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
-    "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.11.0",
-    "react-wavify": "^1.9.0",
     "tailwindcss": "3.3.5",
     "typescript": "5.2.2"
   }
